[tool.poetry]
name = "RobotVision2021-7"
version = "0.1.0"
description = ""
authors = ["nomutin <nomura0508@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.4"
opencv-contrib-python = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
